added books to item slider

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Pages</a>
+                <a class="navbar-brand" href="#">PAGES<span class = "glyphicon glyphicon-book"></span></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -77,70 +77,70 @@
                         <ul>
 
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/1.jpg" alt="img01"><h4>Boots</h4>
+                                <img src="assets/ItemSlider/images/gameofthronesboxset.jpg" alt="img01"><h4>George R. R. Martin's A Game of Thrones 5-Book Boxed Set</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/2.jpg" alt="img02"><h4>Oxfords</h4>
+                                <img src="assets/ItemSlider/images/germangirl.jpeg" height = 250px alt="img02"><h4>The German Girl</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/3.jpg" alt="img03"><h4>Loafers</h4>
+                                <img src="assets/ItemSlider/images/perfectlife.jpg" height = 250px alt="img03"><h4>My (not so) Perfect Life</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/4.jpg" alt="img04"><h4>Sneakers</h4>
-                            </a></li>
-                        </ul>
-                        <ul>
-                            <li><a href="#">
-                                <img src="assets/ItemSlider/images/5.jpg" alt="img05"><h4>Belts</h4>
-                            </a></li>
-                            <li><a href="#">
-                                <img src="assets/ItemSlider/images/6.jpg" alt="img06"><h4>Hats &amp; Caps</h4>
-                            </a></li>
-                            <li><a href="#">
-                                <img src="assets/ItemSlider/images/7.jpg" alt="img07"><h4>Sunglasses</h4>
-                            </a></li>
-                            <li><a href="#">
-                                <img src="assets/ItemSlider/images/8.jpg" alt="img08"><h4>Scarves</h4>
+                                <img src="assets/ItemSlider/images/theorphanstale.jpg" height = 250px alt="img04"><h4>The Orphans Tale</h4>
                             </a></li>
                         </ul>
                         <ul>
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/9.jpg" alt="img09"><h4>Casual</h4>
+                                <img src="assets/ItemSlider/images/turtles%20all%20the%20way%20down.jpg" height = 250px  alt="img05"><h4>Turtles All The Way Down</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/10.jpg" alt="img10"><h4>Luxury</h4>
+                                <img src="assets/ItemSlider/images/noisnotenuf.jpg" height = 250px alt="img06"><h4>No it NOT Enough</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/11.jpg" alt="img11"><h4>Sport</h4>
+                                <img src="assets/ItemSlider/images/sevenstones.jpg" height = 250px alt="img07"><h4>Seven Stones to Stand or Fall</h4>
+                            </a></li>
+                            <li><a href="#">
+                                <img src="assets/ItemSlider/images/thewomanincabin.jpg" height = 250px alt="img08"><h4>The Woman In Cabin 10</h4>
                             </a></li>
                         </ul>
                         <ul>
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/12.jpg" alt="img12"><h4>Carry-Ons</h4>
+                                <img src="assets/ItemSlider/images/clockworkorange.jpg" height = 230px alt="img09"><h4>Anthony Burgess A Clockwork Orange</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/13.jpg" alt="img13"><h4>Duffel Bags</h4>
+                                <img src="assets/ItemSlider/images/bluecastle.jpg" height = 250px alt="img10"><h4>The Blue Castle</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/14.jpg" alt="img14"><h4>Laptop Bags</h4>
+                                <img src="assets/ItemSlider/images/three%20day%20road.jpg" height = 250px alt="img11"><h4>Three Day Road</h4>
+                            </a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#">
+                                <img src="assets/ItemSlider/images/earlscookbook.jpg" height = 250px alt="img12"><h4>Earls: The Cookbook</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/15.jpg" alt="img15"><h4>Briefcases</h4>
+                                <img src="assets/ItemSlider/images/deepwork.jpg" height = 250px alt="img13"><h4>DEEP WORK</h4>
+                            </a></li>
+                            <li><a href="#">
+                                <img src="assets/ItemSlider/images/5secondrule.jpg" height = 250px alt="img14"><h4>The 5 Second Rule</h4>
+                            </a></li>
+                            <li><a href="#">
+                                <img src="assets/ItemSlider/images/5disfunctions.jpg" height = 250px alt="img15"><h4>The FIVE Dysfunctions of a Team</h4>
                             </a></li>
                         </ul>
                         
                         <ul>
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/12.jpg" alt="img12"><h4>Carry-Ons</h4>
+                                <img src="assets/ItemSlider/images/magpiemurders.jpeg" height = 250px alt="img16"><h4>Magpie Murders</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/13.jpg" alt="img13"><h4>Duffel Bags</h4>
+                                <img src="assets/ItemSlider/images/weightofink.jpeg"  height = 250px alt="img17"><h4>The Weight of Ink</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/14.jpg" alt="img14"><h4>Laptop Bags</h4>
+                                <img src="assets/ItemSlider/images/hunger.jpg"  height = 250px alt="img18"><h4>Hunger</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/15.jpg" alt="img15"><h4>Briefcases</h4>
+                                <img src="assets/ItemSlider/images/thereminders.jpg" height = 250px alt="img19"><h4>The Reminders</h4>
                             </a></li>
                         </ul>
                         <nav>
@@ -164,7 +164,7 @@
                     <ul class="list-group">
 
                         <li class="list-group-item">Science Fiction
-      <span class="label label-primary pull-right">234</span>
+      <span class="label label-primary pull-right">1</span>
                         </li>
                         <li class="list-group-item">Satire
                       <span class="label label-success pull-right">1</span>
