--- a/index.html
+++ b/index.html
@@ -275,10 +275,11 @@
                 <div class="row">
                     <div class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img src="assets/img/dummyimg.png" alt="" />
+                            <img src="assets/img/" alt="" />
                             <div class="caption">
                                 <h3><a href="#">Book 1</a></h3>
-                                <p>Price : <strong>$ 3,45,900</strong>  </p>
+                                <p>Author : <strong>Name Here</strong>  </p>
+                                <p>Price : <strong>$00</strong>  </p>
                                 <p><a href="#" class="btn btn-success" role="button">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
@@ -286,10 +287,11 @@
                     <!-- /.col -->
                     <div class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img src="assets/img/dummyimg.png" alt="" />
+                            <img src="assets/img/" alt="" />
                             <div class="caption">
                                 <h3><a href="#">Book 2</a></h3>
-                                <p>Price : <strong>$ 3,45,900</strong>  </p>
+                                <p>Author : <strong>Name Here</strong>  </p>
+                                <p>Price : <strong>$00</strong>  </p>
                                 <p><a href="#" class="btn btn-success" role="button">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
@@ -297,10 +299,11 @@
                     <!-- /.col -->
                     <div class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img src="assets/img/dummyimg.png" alt="" />
+                            <img src="assets/img/" alt="" />
                             <div class="caption">
                                 <h3><a href="#">Book 3</a></h3>
-                                <p>Price : <strong>$ 3,45,900</strong>  </p>
+                                <p>Author : <strong>Name Here</strong>  </p>
+                                <p>Price : <strong>$00</strong>  </p>
                                 <p><a href="#" class="btn btn-success" role="button">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
@@ -308,10 +311,11 @@
                     <!-- /.col -->
                     <div class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img src="assets/img/dummyimg.png" alt="" />
+                            <img src="assets/img/" alt="" />
                             <div class="caption">
                                 <h3><a href="#">Book 4</a></h3>
-                                <p>Price : <strong>$ 3,45,900</strong>  </p>
+                                <p>Author : <strong>Name Here</strong>  </p>
+                                <p>Price : <strong>$00</strong>  </p>
                                 <p><a href="#" class="btn btn-success" role="button">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
@@ -319,10 +323,11 @@
                     <!-- /.col -->
                     <div class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img src="assets/img/dummyimg.png" alt="" />
+                            <img src="assets/img/" alt="" />
                             <div class="caption">
                                 <h3><a href="#">Book 5</a></h3>
-                                <p>Price : <strong>$ 3,45,900</strong>  </p>
+                                <p>Author : <strong>Name Here</strong>  </p>
+                                <p>Price : <strong>$00</strong>  </p>
                                 <p><a href="#" class="btn btn-success" role="button">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
@@ -330,10 +335,11 @@
                     <!-- /.col -->
                     <div class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img src="assets/img/dummyimg.png" alt="" />
+                            <img src="assets/img/" alt="" />
                             <div class="caption">
                                 <h3><a href="#">Book 6</a></h3>
-                                <p>Price : <strong>$ 3,45,900</strong>  </p>
+                                <p>Author : <strong>Name Here</strong>  </p>
+                                <p>Price : <strong>$00</strong>  </p>
                                 <p><a href="#" class="btn btn-success" role="button">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
