--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Cart</a></li>
+                    <li><a href="cart.html">Cart</a></li>
                     <li><a href="#">Login</a></li>
                     <li><a href="#">Signup</a></li>
 
@@ -48,7 +48,7 @@
                             <li class="divider"></li>
                             <li><a href="#"><strong>Address:</strong>
                                 <div>
-                                    234, Laurier Ave,<br />
+                                    1240, Donald Street,<br />
                                     Ottawa, CAN
                                 </div>
                             </a></li>
@@ -94,7 +94,7 @@
                                 <img src="assets/ItemSlider/images/turtles%20all%20the%20way%20down.jpg" height = 250px  alt="img05"><h4>Turtles All The Way Down</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="assets/ItemSlider/images/noisnotenuf.jpg" height = 250px alt="img06"><h4>No it NOT Enough</h4>
+                                <img src="assets/ItemSlider/images/noisnotenuf.jpg" height = 250px alt="img06"><h4>No is NOT Enough</h4>
                             </a></li>
                             <li><a href="#">
                                 <img src="assets/ItemSlider/images/sevenstones.jpg" height = 250px alt="img07"><h4>Seven Stones to Stand or Fall</h4>
@@ -248,7 +248,7 @@
             <div class="col-md-9">
                 <div>
                     <ol class="breadcrumb">
-                        <li><a href="#">Home</a></li>
+                        <li><a id="browsetext" href="#">Browse</a></li>
                         <li class="active"></li>
                     </ol>
                 </div>
@@ -441,6 +441,8 @@
     <!--Slider JavaScript file  -->
     <script src="assets/ItemSlider/js/modernizr.custom.63321.js"></script>
     <script src="assets/ItemSlider/js/jquery.catslider.js"></script>
+    <!--MY PERSONAL JAVASCRIPT FILE-->
+    <script src="assets/js/script.js"></script>
     <script>
         $(function () {
 
