added html files for other pages, cart now increases when add to cart is clicked for a book

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="cart.html">Cart</a></li>
+                    <li><a id="cart" href="cart.html">Cart</a></li>
                     <li><a href="#">Login</a></li>
                     <li><a href="#">Signup</a></li>
 
@@ -280,7 +280,7 @@
                                 <h3><a href="#">Book 1</a></h3>
                                 <p>Author : <strong>Name Here</strong>  </p>
                                 <p>Price : <strong>$00</strong>  </p>
-                                <p><a href="#" class="btn btn-success" role="button">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
+                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
                     </div>
@@ -292,7 +292,7 @@
                                 <h3><a href="#">Book 2</a></h3>
                                 <p>Author : <strong>Name Here</strong>  </p>
                                 <p>Price : <strong>$00</strong>  </p>
-                                <p><a href="#" class="btn btn-success" role="button">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
+                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
                     </div>
@@ -304,7 +304,7 @@
                                 <h3><a href="#">Book 3</a></h3>
                                 <p>Author : <strong>Name Here</strong>  </p>
                                 <p>Price : <strong>$00</strong>  </p>
-                                <p><a href="#" class="btn btn-success" role="button">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
+                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
                     </div>
@@ -316,7 +316,7 @@
                                 <h3><a href="#">Book 4</a></h3>
                                 <p>Author : <strong>Name Here</strong>  </p>
                                 <p>Price : <strong>$00</strong>  </p>
-                                <p><a href="#" class="btn btn-success" role="button">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
+                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
                     </div>
@@ -328,7 +328,7 @@
                                 <h3><a href="#">Book 5</a></h3>
                                 <p>Author : <strong>Name Here</strong>  </p>
                                 <p>Price : <strong>$00</strong>  </p>
-                                <p><a href="#" class="btn btn-success" role="button">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
+                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
                     </div>
@@ -340,7 +340,7 @@
                                 <h3><a href="#">Book 6</a></h3>
                                 <p>Author : <strong>Name Here</strong>  </p>
                                 <p>Price : <strong>$00</strong>  </p>
-                                <p><a href="#" class="btn btn-success" role="button">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
+                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
                     </div>
