--- a/index.html
+++ b/index.html
@@ -248,14 +248,14 @@
             <div class="col-md-9">
                 <div>
                     <ol class="breadcrumb">
-                        <li><a id="browsetext" href="#">Browse</a></li>
-                        <li class="active"></li>
+                        <li><a href="#">Browse</a></li>
+                        <li id="browsetext"class="active"></li>
                     </ol>
                 </div>
                 <!-- /.div -->
                 <div class="row">
                     <div class="btn-group alg-right-pad">
-                        <button type="button" class="btn btn-default"><strong>19  </strong>items</button>
+                        <button id = "numberofitems" type="button" class="btn btn-default"><strong>6  </strong>items</button>
                         <div class="btn-group">
                             <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
                                 Sort Products &nbsp;
