--- a/checkout.html
+++ b/checkout.html
@@ -69,6 +69,67 @@
             <!-- /.navbar-collapse -->
         </div>
     </nav>
+    
+    
+    <!--Footer -->
+    <div class="col-md-12 footer-box">
+        <div class="row">
+            <div class="col-md-4">
+                <strong>Send a Quick Query </strong>
+                <hr>
+                <form>
+                    <div class="row">
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-group">
+                                <input type="text" class="form-control" required="required" placeholder="Name">
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-group">
+                                <input type="text" class="form-control" required="required" placeholder="Email address">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 col-sm-12">
+                            <div class="form-group">
+                                <textarea name="message" id="message" required="required" class="form-control" rows="3" placeholder="Message"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-primary">Submit Request</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+            <div class="col-md-4">
+                <strong>Our Location</strong>
+                <hr>
+                <p>
+                     1240, Donald Street,<br />
+                                    Ottawa, CAN<br />
+                    Call: +09-456-567-890<br>
+                    Email: pages@gmail.com<br>
+                </p>
+
+                2017 www.pages.com | All Right Reserved
+            </div>
+            <div class="col-md-4 social-box">
+                <strong>We are Social </strong>
+                <hr>
+                <a href="#"><i class="fa fa-facebook-square fa-3x "></i></a>
+                <a href="#"><i class="fa fa-twitter-square fa-3x "></i></a>
+                <a href="#"><i class="fa fa-google-plus-square fa-3x c"></i></a>
+                <a href="#"><i class="fa fa-linkedin-square fa-3x "></i></a>
+                <a href="#"><i class="fa fa-pinterest-square fa-3x "></i></a>
+                <p>
+                    Stay connected with pages by following us on our social media pages!
+                </p>
+            </div>
+        </div>
+        <hr>
+    </div>
     <!--bootstrap JavaScript file  -->
     <script src="assets/js/bootstrap.js"></script>
     <!--MY PERSONAL JAVASCRIPT FILE-->
