--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
             <div class="col-md-9">
                 <div>
                     <ol class="breadcrumb">
-                        <li><a href="#">Browse</a></li>
-                        <li id="browsetext"class="active"></li>
+                        <li><a href="index.html">Browse</a></li>
+                        <li id="browsetext"class="active">Most Popular</li>
                     </ol>
                 </div>
                 <!-- /.div -->
@@ -276,7 +276,7 @@
                 <div class="row">
                     <div id = "book1 "class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img id="book1img" src="assets/img/" alt="" />
+                            <img id="book1img" src="assets/ItemSlider/images/gameofthronesboxset.jpg" height = "250px"/>
                             <div class="caption">
                                 <h3><a id="book1name" href="#">Book 1</a></h3>
                                 <p id="book1author">Author : <strong>Name Here</strong>  </p>
@@ -288,7 +288,7 @@
                     <!-- /.col -->
                     <div id = "book2" class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img id="book2img" src="assets/img/" alt="" />
+                            <img id="book2img" height = "250px" src="assets/ItemSlider/images/gameofthronesboxset.jpg" alt="" />
                             <div class="caption">
                                 <h3><a id="book2name" href="#">Book 1</a></h3>
                                 <p id="book2author">Author : <strong>Name Here</strong>  </p>
@@ -300,7 +300,7 @@
                     <!-- /.col -->
                     <div id = "book3" class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img id="book3img" src="assets/img/" alt="" />
+                            <img id="book3img" height = "250px" src="assets/ItemSlider/images/gameofthronesboxset.jpg" alt="" />
                             <div class="caption">
                                 <h3><a id="book3name" href="#">Book 1</a></h3>
                                 <p id="book3author">Author : <strong>Name Here</strong>  </p>
@@ -312,7 +312,7 @@
                     <!-- /.col -->
                     <div id = "book4" class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img id="book4img" src="assets/img/" alt="" />
+                            <img id="book4img" height = "250px" src="assets/ItemSlider/images/gameofthronesboxset.jpg" alt="" />
                             <div class="caption">
                                 <h3><a id="book4name" href="#">Book 1</a></h3>
                                 <p id="book4author">Author : <strong>Name Here</strong>  </p>
@@ -324,7 +324,7 @@
                     <!-- /.col -->
                     <div id = "book5" class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img id="book5img" src="assets/img/" alt="" />
+                            <img id="book5img" height = "250px" src="assets/ItemSlider/images/gameofthronesboxset.jpg" alt="" />
                             <div class="caption">
                                 <h3><a id="book5name" href="#">Book 1</a></h3>
                                 <p id="book5author">Author : <strong>Name Here</strong>  </p>
@@ -336,7 +336,7 @@
                     <!-- /.col -->
                     <div id = "book6" class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img id="book6img" src="assets/img/" alt="" />
+                            <img id="book6img" height = "250px" src="assets/ItemSlider/images/gameofthronesboxset.jpg" alt="" />
                             <div class="caption">
                                 <h3><a id="book6name" href="#">Book 1</a></h3>
                                 <p id="book6author">Author : <strong>Name Here</strong>  </p>
@@ -352,8 +352,6 @@
                     <ul class="pagination alg-right-pad">
                         <li><a href="#">&laquo;</a></li>
                         <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
                         <li><a href="#">&raquo;</a></li>
                     </ul>
                 </div>
