browsing by categories now hides extra books

--- a/bookinfo.html
+++ b/bookinfo.html
@@ -81,8 +81,8 @@
             <img height = "500px" width = "400px" src = assets/ItemSlider/images/gameofthronesboxset.jpg>
         </div>
         <div class="col-lg-4">
-            <h2>Book Name</h2>
-            <p>By Author</p>
+            <h2>Game of Thrones 5 Book Box Set</h2>
+            <p>By George R.R. Martin</p>
             <p style="font-size=5px">Paperback | July 4th, 2017</p>
             <hr>
             
@@ -91,7 +91,7 @@
 
             <hr>
             
-            <h4>19.99$</h4>
+            <h4>45.99$</h4>
                 <h4><select>
                     <option value="1">1</option>
                     <option value="2">2</option>
