Checkout page base finished

--- a/cart.html
+++ b/cart.html
@@ -175,7 +175,7 @@
         <center>
             <Strong><h2 position = "absolute" top = "0">Order Summary</h2></Strong>
             <p>Subtotal: <strong>99999.99$</strong>  </p>
-            <p><a class="btn btn-success">Check Out</a></p>
+            <p><a href="checkout.html" class="btn btn-success">Check Out</a></p>
         </center>
     </div>
     
