--- a/bookinfo.html
+++ b/bookinfo.html
@@ -36,7 +36,7 @@
 
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a id="cart" href="#">Cart</a></li>
+                    <li><a id="cart" href="cart.html">Cart</a></li>
                     <li><a href="#">Login</a></li>
                     <li><a href="#">Signup</a></li>
 
