--- a/index.html
+++ b/index.html
@@ -76,70 +76,70 @@
                     <div id="mi-slider" class="mi-slider">
                         <ul>
 
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/gameofthronesboxset.jpg" alt="img01"><h4>George R. R. Martin's A Game of Thrones 5-Book Boxed Set</h4>
                             </a></li>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/germangirl.jpeg" height = 250px alt="img02"><h4>The German Girl</h4>
                             </a></li>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/perfectlife.jpg" height = 250px alt="img03"><h4>My (not so) Perfect Life</h4>
                             </a></li>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/theorphanstale.jpg" height = 250px alt="img04"><h4>The Orphans Tale</h4>
                             </a></li>
                         </ul>
                         <ul>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/turtles%20all%20the%20way%20down.jpg" height = 250px  alt="img05"><h4>Turtles All The Way Down</h4>
                             </a></li>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/noisnotenuf.jpg" height = 250px alt="img06"><h4>No is NOT Enough</h4>
                             </a></li>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/sevenstones.jpg" height = 250px alt="img07"><h4>Seven Stones to Stand or Fall</h4>
                             </a></li>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/thewomanincabin.jpg" height = 250px alt="img08"><h4>The Woman In Cabin 10</h4>
                             </a></li>
                         </ul>
                         <ul>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/clockworkorange.jpg" height = 230px alt="img09"><h4>Anthony Burgess A Clockwork Orange</h4>
                             </a></li>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/bluecastle.jpg" height = 250px alt="img10"><h4>The Blue Castle</h4>
                             </a></li>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/three%20day%20road.jpg" height = 250px alt="img11"><h4>Three Day Road</h4>
                             </a></li>
                         </ul>
                         <ul>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/earlscookbook.jpg" height = 250px alt="img12"><h4>Earls: The Cookbook</h4>
                             </a></li>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/deepwork.jpg" height = 250px alt="img13"><h4>DEEP WORK</h4>
                             </a></li>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/5secondrule.jpg" height = 250px alt="img14"><h4>The 5 Second Rule</h4>
                             </a></li>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/5disfunctions.jpg" height = 250px alt="img15"><h4>The FIVE Dysfunctions of a Team</h4>
                             </a></li>
                         </ul>
                         
                         <ul>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/magpiemurders.jpeg" height = 250px alt="img16"><h4>Magpie Murders</h4>
                             </a></li>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/weightofink.jpeg"  height = 250px alt="img17"><h4>The Weight of Ink</h4>
                             </a></li>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/hunger.jpg"  height = 250px alt="img18"><h4>Hunger</h4>
                             </a></li>
-                            <li><a href="#">
+                            <li><a href="bookinfo.html">
                                 <img src="assets/ItemSlider/images/thereminders.jpg" height = 250px alt="img19"><h4>The Reminders</h4>
                             </a></li>
                         </ul>
@@ -281,7 +281,7 @@
                                 <h3><a id="book1name" href="#">Game of Thrones 5 Book Box Set</a></h3>
                                 <p id="book1author">Author : <strong>George R.R. Martin</strong>  </p>
                                 <p id="book1price">Price : <strong>$45.99</strong>  </p>
-                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
+                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="bookinfo.html" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
                     </div>
@@ -293,7 +293,7 @@
                                 <h3><a id="book2name" href="#">The German Girl</a></h3>
                                 <p id="book2author">Author : <strong>Armando Lucas Correa</strong>  </p>
                                 <p id="book2price">Price : <strong>$9.99</strong>  </p>
-                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
+                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="bookinfo.html" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
                     </div>
@@ -305,7 +305,7 @@
                                 <h3><a id="book3name" href="#">My (Not So) Perfect Life</a></h3>
                                 <p id="book3author">Author : <strong>Sophie Kinsella</strong>  </p>
                                 <p id="book3price">Price : <strong>$16.99</strong>  </p>
-                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
+                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="bookinfo.html" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
                     </div>
@@ -317,7 +317,7 @@
                                 <h3><a id="book4name" href="#">The Orphans Tale</a></h3>
                                 <p id="book4author">Author : <strong>Pam Jenoff</strong>  </p>
                                 <p id="book4price">Price : <strong>$9.99</strong>  </p>
-                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
+                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="bookinfo.html" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
                     </div>
@@ -329,7 +329,7 @@
                                 <h3><a id="book5name" href="#">Magpie Murders</a></h3>
                                 <p id="book5author">Author : <strong>Anthony Horrowitz</strong>  </p>
                                 <p id="book5price">Price : <strong>$13.99</strong>  </p>
-                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
+                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="bookinfo.html" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
                     </div>
@@ -341,7 +341,7 @@
                                 <h3><a id="book6name" href="#">Woman in Cabin 10</a></h3>
                                 <p id="book6author">Author : <strong>Ruth Ware</strong>  </p>
                                 <p id="book6price">Price : <strong>$15.99</strong>  </p>
-                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="#" class="btn btn-primary" role="button">See Details</a></p>
+                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="bookinfo.html" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
                     </div>
