--- a/search.html
+++ b/search.html
@@ -36,7 +36,7 @@
 
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Cart</a></li>
+                    <li><a id = "cart" href="cart.html">Cart</a></li>
                     <li><a href="#">Login</a></li>
                     <li><a href="#">Signup</a></li>
 
@@ -88,13 +88,20 @@
                 </a>
             </div>
             <div class = "col-lg-6">
-                <h4 href="#" >Game of Thrones 5-Book Box Set</h4>
+                <h4>Game of Thrones 5-Book Box Set</h4>
                 <h5>By George R.R. Martin</h5>
                 <a>45.99$</a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam in leo arcu. Duis tincidunt dignissim molestie. Mauris nec auctor justo, sed lacinia metus. Phasellus placerat sed ligula id blandit...</p>
             </div>
             <div class = "col-lg-3">
-                <h4></h4>
+                <br>
+                <div class="rating">
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star half"></i>
+                </div>
                 <p><strong><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a></strong></p>
             </div>
         </div>
@@ -112,7 +119,14 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam in leo arcu. Duis tincidunt dignissim molestie. Mauris nec auctor justo, sed lacinia metus. Phasellus placerat sed ligula id blandit...</p>
             </div>
             <div class = "col-lg-3">
-                <h4></h4>
+                <br>
+                <div class="rating">
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star half"></i>
+                </div>
                 <p><strong><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a></strong></p>
             </div>
         </div>
@@ -130,7 +144,14 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam in leo arcu. Duis tincidunt dignissim molestie. Mauris nec auctor justo, sed lacinia metus. Phasellus placerat sed ligula id blandit...</p>
             </div>
             <div class = "col-lg-3">
-                <h4></h4>
+                <br>
+                <div class="rating">
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star half"></i>
+                </div>
                 <p><strong><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a></strong></p>
             </div>
         </div>
@@ -148,7 +169,14 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam in leo arcu. Duis tincidunt dignissim molestie. Mauris nec auctor justo, sed lacinia metus. Phasellus placerat sed ligula id blandit...</p>
             </div>
             <div class = "col-lg-3">
-                <h4></h4>
+                <br>
+                <div class="rating">
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star half"></i>
+                </div>
                 <p><strong><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a></strong></p>
             </div>
         </div>
@@ -166,7 +194,14 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam in leo arcu. Duis tincidunt dignissim molestie. Mauris nec auctor justo, sed lacinia metus. Phasellus placerat sed ligula id blandit...</p>
             </div>
             <div class = "col-lg-3">
-                <h4></h4>
+                <br>
+                <div class="rating">
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star"></i>
+                    <i class="glyphicon glyphicon-star half"></i>
+                </div>
                 <p><strong><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a></strong></p>
             </div>
         </div>
