changes here and there

--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
                         <div id = "book1" class="thumbnail product-box-fluid">
                             <img id="book1img" src="assets/ItemSlider/images/gameofthronesboxset.jpg" height = "500px" width ="150px"/>
                             <div class="caption">
-                                <h3><a id="book1name" href="#">Game of Thrones 5 Book Box Set</a></h3>
+                                <h3><a id="book1name" href="bookinfo.html">Game of Thrones 5 Book Box Set</a></h3>
                                 <p id="book1author">Author : <strong>George R.R. Martin</strong>  </p>
                                 <p id="book1price">Price : <strong>$45.99</strong>  </p>
-                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="bookinfo.html" class="btn btn-primary" role="button">See Details</a></p>
+                                <p><a href="" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="bookinfo.html" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
                     </div>
@@ -290,7 +290,7 @@
                         <div id = "book2" class="thumbnail product-box-fluid">
                             <img id="book2img" height = "250px" width ="150px" src="assets/ItemSlider/images/germangirl.jpeg" alt="" />
                             <div class="caption">
-                                <h3><a id="book2name" href="#">The German Girl</a></h3>
+                                <h3><a id="book2name" href="bookinfo.html">The German Girl</a></h3>
                                 <p id="book2author">Author : <strong>Armando Lucas Correa</strong>  </p>
                                 <p id="book2price">Price : <strong>$9.99</strong>  </p>
                                 <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="bookinfo.html" class="btn btn-primary" role="button">See Details</a></p>
@@ -302,7 +302,7 @@
                         <div id = "book3" class="thumbnail product-box-fluid">
                             <img id="book3img" height = "250px" width ="150px" src="assets/ItemSlider/images/perfectlife.jpg" alt="" />
                             <div class="caption">
-                                <h3><a id="book3name" href="#">My (Not So) Perfect Life</a></h3>
+                                <h3><a id="book3name" href="bookinfo.html">My (Not So) Perfect Life</a></h3>
                                 <p id="book3author">Author : <strong>Sophie Kinsella</strong>  </p>
                                 <p id="book3price">Price : <strong>$16.99</strong>  </p>
                                 <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="bookinfo.html" class="btn btn-primary" role="button">See Details</a></p>
@@ -314,7 +314,7 @@
                         <div id = "book4" class="thumbnail product-box-fluid">
                             <img id="book4img" height = "250px" width ="150px" src="assets/ItemSlider/images/theorphanstale.jpg" alt="" />
                             <div class="caption">
-                                <h3><a id="book4name" href="#">The Orphans Tale</a></h3>
+                                <h3><a id="book4name" href="bookinfo.html">The Orphans Tale</a></h3>
                                 <p id="book4author">Author : <strong>Pam Jenoff</strong>  </p>
                                 <p id="book4price">Price : <strong>$9.99</strong>  </p>
                                 <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="bookinfo.html" class="btn btn-primary" role="button">See Details</a></p>
@@ -326,7 +326,7 @@
                         <div id = "book5" class="thumbnail product-box-fluid">
                             <img id="book5img" height = "250px" width ="150px" src="assets/ItemSlider/images/magpiemurders.jpeg" alt="" />
                             <div class="caption">
-                                <h3><a id="book5name" href="#">Magpie Murders</a></h3>
+                                <h3><a id="book5name" href="bookinfo.html">Magpie Murders</a></h3>
                                 <p id="book5author">Author : <strong>Anthony Horrowitz</strong>  </p>
                                 <p id="book5price">Price : <strong>$13.99</strong>  </p>
                                 <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="bookinfo.html" class="btn btn-primary" role="button">See Details</a></p>
@@ -338,7 +338,7 @@
                         <div id = "book6" class="thumbnail product-box-fluid">
                             <img id="book6img" height = "250px" width ="150px" src="assets/ItemSlider/images/thewomanincabin.jpg" alt="" />
                             <div class="caption">
-                                <h3><a id="book6name" href="#">Woman in Cabin 10</a></h3>
+                                <h3><a id="book6name" href="bookinfo.html">Woman in Cabin 10</a></h3>
                                 <p id="book6author">Author : <strong>Ruth Ware</strong>  </p>
                                 <p id="book6price">Price : <strong>$15.99</strong>  </p>
                                 <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="bookinfo.html" class="btn btn-primary" role="button">See Details</a></p>
