--- a/search.html
+++ b/search.html
@@ -59,9 +59,9 @@
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Search">
                         <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit">
+                            <a href="search.html" class="btn btn-default" role="button">
                                 <i class="glyphicon glyphicon-search"></i>
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </form>
@@ -71,9 +71,111 @@
     </nav>
     
     <div class = "col-lg-2">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href="#" class="list-group-item active">Filter By</a>
+        <ul class="list-group">
+                <li class="list-group-item">Categories
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="false">
+                        <label for="checkbox1">Science Fiction</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="false">
+                        <label for="checkbox1">Satire</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="false">
+                        <label for="checkbox1">Art</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">Fantasy</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">Biography</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">Self-Help</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">Action & Adventure</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">Mystery</label>
+                    </div>  
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">Guide & Travel</label>
+                    </div>  
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">Childrens</label>
+                    </div>
+                </li>
+                <li class="list-group-item">Age Range
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">Baby and Toddler (0-2 Years)</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">Preschooler (3-5 Years)</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">Kids (6-8 Years)</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">Tween (9-12 Years)</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">Teen (13-17 Years)</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">Adult (18+ Years)</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">All Ages</label>
+                    </div>   
+                </li>
+                <li class="list-group-item">Price Range
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">Under $15</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">$15-$25</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">$25-$50</label>
+                    </div>
+                    <div class="checkbox checkbox-info checkbox-circle">
+                        <input id="checkbox1" type="checkbox" checked="">
+                        <label for="checkbox1">Over $50</label>
+                    </div>  
+                </li>
+        </ul>
     </div>
     
     <div class = "col-lg-8">
+        <br>
         <div class = "row">
             <h2>5 Search Results For ""</h2>
             <p style="font-size:15px">Related search results: ""</p>
