--- a/checkout.html
+++ b/checkout.html
@@ -59,9 +59,9 @@
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Search">
                         <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit">
+                            <a href="search.html" class="btn btn-default" role="button">
                                 <i class="glyphicon glyphicon-search"></i>
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </form>
