final commit for now

--- a/bookinfo.html
+++ b/bookinfo.html
@@ -116,19 +116,49 @@
         <div class="col-lg-1">
         </div>
         <div class="col-lg-2">
+            <center>
             <img height = 150px src=assets/ItemSlider/images/clockworkorange.jpg>
+            </center>
+            <br>
+            <center>
+            <a href = "bookinfo.html">A Clockwork Orange</a>
+            </center>
         </div>
         <div class="col-lg-2">
+            <center>
             <img height = 150px src=assets/ItemSlider/images/sevenstones.jpg>
+            </center>
+            <br>
+            <center>
+            <a href = "bookinfo.html">Seven Stones Stand Or Fall</a>
+            </center>
         </div>
         <div class="col-lg-2">
+            <center>
             <img height = 150px src=assets/ItemSlider/images/thewomanincabin.jpg>
+            </center>
+            <br>
+            <center>
+            <a href = "bookinfo.html">The Woman in the Cabin</a>
+            </center>
         </div>
         <div class="col-lg-2">
+            <center>
             <img height = 150px src=assets/ItemSlider/images/magpiemurders.jpeg>
+            </center>
+            <br>
+            <center>
+            <a href = "bookinfo.html">Magpie Murders</a>
+            </center>
         </div>
         <div class="col-lg-2">
+            <center>
             <img height = 150px src=assets/ItemSlider/images/perfectlife.jpg>
+            </center>
+            <br>
+            <center>
+            <a href = "bookinfo.html">My (Not so) Perfect Life</a>
+            </center>
         </div>
     </div>
     
