--- a/cart.html
+++ b/cart.html
@@ -87,7 +87,9 @@
                 <div class="thumbnail product-box">
                 <p><strong>Item Name</strong></p>
                 <h4>The German Girl</h4>
+                    <a href = "bookinfo.html">
                     <img height=250px width=150px src="assets/ItemSlider/images/germangirl.jpeg" alt="" />
+                    </a>
                 </div>
             </div>
             <div class = "col-lg-2">
@@ -111,7 +113,9 @@
                 <div class="thumbnail product-box">
                 <p><strong>Item Name</strong></p>
                 <h4>A Clockwork Orange</h4>
+                <a href = "bookinfo.html">
                     <img height=250px width=150px src="assets/ItemSlider/images/clockworkorange.jpg" alt="" />
+                </a>
                 </div>
             </div>
             <div class = "col-lg-2">
@@ -135,7 +139,9 @@
                 <div class="thumbnail product-box">
                 <p><strong>Item Name</strong></p>
                 <h4>Magpie Murders</h4>
+                <a href = "bookinfo.html">
                     <img height=250px width=150px src="assets/ItemSlider/images/magpiemurders.jpeg" alt="" />
+                </a>
                 </div>
             </div>
             <div class = "col-lg-2">
@@ -156,7 +162,7 @@
         
     </div>
     
-    <div class = "col-lg-3">
+    <div class = "thumbnail product-box col-lg-3">
         <center>
             <Strong><h2 position = "absolute" top = "0">Order Summary</h2></Strong>
             <p>Subtotal: <strong>33.97$</strong>  </p>
