--- a/checkout.html
+++ b/checkout.html
@@ -102,6 +102,7 @@
                 <hr style="border-color:#A9A9A9">
                 
                 <p style="font-size:15px">Subtotal: 33.97$<br>Discount Code: N/A<br>Tax: 4.41$<br>Shipping and Handling: Free</p>
+                <hr style="border-color:#A9A9A9">
                 <p>Order Total: 38.39$</p>
             </div>
             <hr>
